clusters/platform/tekton/pac/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pac-ingress
  namespace: pipelines-as-code
spec:
  rules:
    - host: "tekton.shopflow.dev" # Replace with your dynamic domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipelines-as-code-controller
                port:
                  number: 8080
